@@ -281,6 +281,7 @@ END
 IDR_MAINFRAME ACCELERATORS 
 BEGIN
     "C",            ID_EDIT_COPY,           VIRTKEY, CONTROL, NOINVERT
+    VK_INSERT,      ID_EDIT_COPY,           VIRTKEY, CONTROL, NOINVERT
     "O",            ID_FILE_OPEN,           VIRTKEY, CONTROL, NOINVERT
     "P",            ID_FILE_PRINT,          VIRTKEY, CONTROL, NOINVERT
     VK_F6,          ID_NEXT_PANE,           VIRTKEY, NOINVERT
@@ -299,14 +300,17 @@ BEGIN
     "M",            ID_ZOOM_CUSTOM,         VIRTKEY, CONTROL, NOINVERT
     "0",            ID_ZOOM_FITPAGE,        VIRTKEY, CONTROL, NOINVERT
     "2",            ID_ZOOM_FITWIDTH,       VIRTKEY, CONTROL, NOINVERT
+    VK_ADD,         ID_ZOOM_IN,             VIRTKEY, NOINVERT
     VK_ADD,         ID_ZOOM_IN,             VIRTKEY, CONTROL, NOINVERT
     VK_OEM_PLUS,    ID_ZOOM_IN,             VIRTKEY, CONTROL, NOINVERT
     VK_OEM_PLUS,    ID_ZOOM_IN,             VIRTKEY, SHIFT, CONTROL, 
                                                     NOINVERT
     VK_OEM_MINUS,   ID_ZOOM_OUT,            VIRTKEY, CONTROL, NOINVERT
+    VK_SUBTRACT,    ID_ZOOM_OUT,            VIRTKEY, NOINVERT
     VK_SUBTRACT,    ID_ZOOM_OUT,            VIRTKEY, CONTROL, NOINVERT
     "3",            ID_ZOOM_STRETCH,        VIRTKEY, CONTROL, NOINVERT
-    VK_INSERT,      ID_EDIT_COPY,           VIRTKEY, CONTROL, NOINVERT
+    VK_MULTIPLY,    ID_ZOOM_FITPAGE,        VIRTKEY, NOINVERT
+    VK_MULTIPLY,    ID_ZOOM_FITPAGE,        VIRTKEY, CONTROL, NOINVERT
 END
 
 
@@ -449,14 +453,14 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,62,26,50,14
 END
 
-IDD_SETTINGS DIALOGEX 0, 0, 219, 198
+IDD_SETTINGS DIALOGEX 0, 0, 219, 195
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
     WS_SYSMENU
 CAPTION "Settings"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,106,177,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,162,177,50,14
+    DEFPUSHBUTTON   "OK",IDOK,106,174,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,162,174,50,14
     GROUPBOX        "File associations",IDC_STATIC,7,7,205,58
     LTEXT           "Press to associate WinDjView with .djvu and .djv files:",
                     IDC_STATIC,15,18,182,9
@@ -464,24 +468,26 @@ BEGIN
     CONTROL         "&Restore associations at program start",
                     IDC_RESTORE_ASSOCS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,
                     15,49,188,10
-    GROUPBOX        "Thumbnails",IDC_STATIC,7,69,205,29
+    GROUPBOX        "Display",IDC_STATIC,7,69,205,98
     CONTROL         "Generate &thumbnails for all pages in background",
                     IDC_GEN_ALL_THUMBNAILS,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,15,82,188,10
-    GROUPBOX        "Display",IDC_STATIC,7,102,205,69
+    CONTROL         "&Mouse clicks switch pages in fullscreen mode",
+                    IDC_FULLSCREEN_CLICKS,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,15,96,188,10
     CONTROL         "A&djust settings:",IDC_ADJUST_DISPLAY,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,15,115,97,9
-    LTEXT           "&Brightness: 0",IDC_BRIGHTNESS_TEXT,15,129,61,9
-    CONTROL         "",IDC_BRIGHTNESS,"msctls_trackbar32",WS_TABSTOP,76,128,
+                    BS_AUTOCHECKBOX | WS_TABSTOP,15,111,97,9
+    LTEXT           "&Brightness: 0",IDC_BRIGHTNESS_TEXT,15,125,61,9
+    CONTROL         "",IDC_BRIGHTNESS,"msctls_trackbar32",WS_TABSTOP,76,124,
                     131,12
-    LTEXT           "&Contrast: 0",IDC_CONTRAST_TEXT,15,142,55,9
-    CONTROL         "",IDC_CONTRAST,"msctls_trackbar32",WS_TABSTOP,76,141,
+    LTEXT           "&Contrast: 0",IDC_CONTRAST_TEXT,15,138,55,9
+    CONTROL         "",IDC_CONTRAST,"msctls_trackbar32",WS_TABSTOP,76,137,
                     131,12
-    LTEXT           "&Gamma: 1.0",IDC_GAMMA_TEXT,15,155,45,9
-    CONTROL         "",IDC_GAMMA,"msctls_trackbar32",WS_TABSTOP,76,154,131,
+    LTEXT           "&Gamma: 1.0",IDC_GAMMA_TEXT,15,151,45,9
+    CONTROL         "",IDC_GAMMA,"msctls_trackbar32",WS_TABSTOP,76,150,131,
                     12
     LTEXT           "WinDjView 0.3.3\nby Andrew Zhezherun",IDC_STATIC_ABOUT,
-                    7,177,92,18
+                    7,174,92,18
 END
 
 IDD_FIND DIALOGEX 0, 0, 287, 64
@@ -595,7 +601,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 212
         TOPMARGIN, 7
-        BOTTOMMARGIN, 191
+        BOTTOMMARGIN, 188
     END
 
     IDD_FIND, DIALOG
